# vps_lastfm

./: .env.example  .gitignore  Cargo.toml  README.md
data/: play_counts_20250214_220411.json
src/: config.rs  main.rs  url_builder.rs
src/update_gist/: mod.rs
