[package]
name = "vps-lastfm"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lastfm-client = { git = "https://github.com/TomPlanche/lastfm-client.git" }
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
cron = "0.15.0"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde_json = "1.0"
