[package]
name = "vps-lastfm"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
lastfm-client = { version = "4.0.1", features = ["sqlite"]}
tokio = { version = "1.52.3", features = ["full"] }
chrono = "0.4.45"
cron = "0.15.0"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
serde_json = "1.0"
